# CStudy

./: .gitignore  CMakeLists.txt  README.md  bubble.cpp  main.cpp  memory_allocate.c  pointer_arr.c  text.txt  二级指针函数输出.c  二级指针操作文件.c  动态内存分配.c  指针赋值.c
C++/: variableParam.cpp  多态.cpp
C++/Polymorphism/: 多态与虚函数.cpp
C++/Scattered/: Function.cpp  inherit.cpp  namespace_demo.cpp  namespace_demo.h
C++/collection/: Container.cpp
C++/overload/: FunctionOverloading.cpp  FunctionOverloading.h
C++/static/: static.cpp  static.h
C++/template/: template.cpp  template.h
configfile/: cfg.ini  cfgfile.c  file.h  testconfig.c
encryption/: cfg_crypt.ini  cfg_decrypt.ini  encrypt.c
leak/: leakmem.c  leakmem.h  leakmem_test.c
operatefile/: file.c  src.txt  test.txt
thread/: pthread.c
