cmake_minimum_required(VERSION 3.14)
project(Demo C CXX)
set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 11)

add_executable(main main.cpp)
add_executable(2ndPoint 二级指针函数输出.c
      )
add_executable(dynamicalloc   动态内存分配.c)
add_executable(leakmem leak/leakmem.h leak/leakmem.c leak/leakmem_test.c)
add_executable(encry encryption/encrypt.c)
add_executable(configfile configfile/testconfig.c configfile/cfgfile.c)
add_executable(memalloc memory_allocate.c)
add_executable(posarr pointer_arr.c)
add_executable(bubble bubble.cpp)
add_executable(posoperatefile 二级指针操作文件.c)
add_executable(pointer_value 指针赋值.c)
add_executable(operatefile operatefile/file.c)
add_executable(multi C++/多态.cpp)